<resources>
    <string name="app_name">Hex input demo</string>
    <string name="standard_text_input">Standard text input</string>
    <string name="another_hex_input">Another hex input</string>
    <string name="simple_hex_input">Simple hex input</string>
    <string name="demo_hex_input">Demo hex input</string>
    <string name="hex_formatter">Hex formatter:</string>
    <string name="hex_values_limit">Hex values limit</string>
    <string name="apply_limit">Apply limit</string>
    <string name="no_value">-</string>
    <string name="applied_limit">Applied limit:</string>
</resources>