<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.aconno.hexinputlib.ui.editor.HexEditText
            android:id="@+id/simple_hex_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/simple_hex_input"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/standard_text_input"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <com.aconno.hexinputlib.ui.editor.HexEditText
            android:id="@+id/demo_hex_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/demo_hex_input"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hex_formatter"/>

    <Spinner
        android:id="@+id/hex_formatter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/hex_values_limit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/hex_values_limit"
            android:autofillHints=""
            />

    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>